--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "section04_Artifacts/artifacts_demo"]
 	path = section04_Artifacts/artifacts_demo
 	url = git@gitlab.com:udemy7523451/artifacts_demo.git
+[submodule "section06_Local_Runners/local-runners"]
+	path = section06_Local_Runners/local-runners
+	url = git@gitlab.com:udemy7523451/runners-project.git
