--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "section07_Variables/Variables_Demo"]
 	path = section07_Variables/Variables_Demo
 	url = git@gitlab.com:udemy7523451/variables_demo.git
+[submodule "section08_Start_Demo_Project/Demo_Project"]
+	path = section08_Start_Demo_Project/Demo_Project
+	url = git@gitlab.com:udemy7523451/demo_project.git
